--- a/config/database.yml
+++ b/config/database.yml
@@ -83,4 +83,6 @@ production:
   database: admin-panel_production
   username: postgres
   password: <%= ENV["PSQL_PASSWORD"] %>
+  host: localhost
+  port: 5432
   url: <%= ENV['DATABASE_URL'] %>
